tjird attemp